--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,7 @@ form {
 .banner {
     position: relative;
     height: 250px;
-    background-image: url("https://images.unsplash.com/photo-1557682224-5b8590cd9ec5?ixlib=rb-1.2.1&w=1000&q=80");
+    background-image: url("putin.jpg");
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -83,6 +83,7 @@ textarea {
 
 .item {
     position: relative;
+     justify-content: center;
     margin: 10px 0;
 }
 
@@ -159,6 +160,7 @@ button:hover {
 
 @media (min-width: 568px) {
     .name-item, .city-item {
+        justify-content: center;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
