--- a/templates/generate_key.html
+++ b/templates/generate_key.html
@@ -11,71 +11,14 @@
 <div class="testbox">
     <form action="/">
         <div class="banner">
-            <h1>Vote</h1>
+            <h1>Generate your private key</h1>
         </div>
-        <div class="item">
-            <label for="name">Name<span class="red">*</span></label>
-            <div class="name-item">
-                <input id="private_key" type="text" name="private_key" placeholder="First" required/>
-            </div>
-        </div>
-        <div class="question">
-            <label>Vote</label>
-            <div class="question-answer">
-                {% if candidates %}
-                    {% for i in range(n) %}
-                       <div>
-                        <input type="radio" value=0 id="radio_1" name="candidate"/>
-                        <label for="radio_1" class="radio"><span>{{ candidates[i] }}</span></label>
-                       </div>
-                    {% endfor %}
-                {% endif %}
 
-            </div>
-        </div>
         <div class="btn-block">
-            <button id="btnSubmit" type="button">Send</button>
+            <button id="btnSubmit" type="submit" formaction="http://0.0.0.0:8000/vote" type="button">Genearate</button>
         </div>
     </form>
 </div>
 </body>
 
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 
-<script>
-    $(document).ready(function () {
-        function button_handler() {
-            const payload = {
-                sender: document.getElementById('user_tag').value,
-                recipient: $("input[name='candidate']:checked").val(),
-            };
-            $.ajax({
-                 type: 'POST',
-                 url: "http://0.0.0.0:500/nodes",
-                 success: function (data) {
-                 data.forEach( function(item, i, arr) {
-                    $.ajax({
-                        type: 'POST',
-                        url: item,
-                        data: payload,
-                        async: false,
-                        content_type: 'application/json;charset=UTF-8',
-                        success: function (data, status, xhr) {
-                        location.href = (data.valid) ? 'final' : 'error';
-                    },
-                     error: function (data, status, error) {
-                        alert('error!');
-                        console.log(status);
-                     }
-                    });
-                });
-            }
-
-            return false;
-
-        }
-        $('#btnSubmit').click(function () {
-            button_handler();
-        });
-    });
-</script>
