--- a/templates/page.html
+++ b/templates/page.html
@@ -54,7 +54,7 @@
             };
             $.ajax({
                 type: 'POST',
-                url: 'http://127.0.0.1:8000/vote',
+                url: './vote',
                 data: payload,
                 async: false,
                 content_type: 'application/json;charset=UTF-8',
