--- a/templates/generate_key.html
+++ b/templates/generate_key.html
@@ -11,8 +11,9 @@
 <div class="testbox">
     <form action="/">
         <div class="banner">
-            <h1>Generate your private key</h1>
+            <h1>VoteChain</h1>
         </div>
+        <h3>Generate your private key</h3>
         <label for="name1">
              {% if keyword %}
              Enter your key_word
