--- a/templates/final.html
+++ b/templates/final.html
@@ -5,12 +5,12 @@
     <h1 class="display-3">Thank You!</h1>
     <p>
         Having trouble? Contact us! <br>
-        <a href="https://vk.com/detininroman">Roman Detinin</a><br>
-        <a href="https://vk.com/oakmaan">Kamila Ragimova</a><br>
-        <a href="https://vk.com/polista">Polina Starodumova</a><br>
-        <a href="https://vk.com/smesh00">Anastasia Smeshko</a><br>
+        <a href="https://vk.com/id50381273">Alexander Nevarko</a><br>
+        <a href="https://vk.com/kucher_sanika">Alexander Kuchereko</a><br>
+        <a href="https://vk.com/nick3pavlov">Nikita Pavlov</a><br>
+        <a href="https://vk.com/id109461629">Maxim Pavlov</a><br>
     </p>
     <p class="lead">
-        <a class="btn btn-primary btn-sm" href="http://127.0.0.1:5000/" role="button">Continue to homepage</a>
+        <a class="btn btn-primary btn-sm" href="./" role="button">Continue to homepage</a>
     </p>
 </div>
