--- a/templates/page.html
+++ b/templates/page.html
@@ -75,14 +75,12 @@
                 data: payload,
                 async: false,
                 content_type: 'application/json;charset=UTF-8',
-                success: function (data, status, xhr) {
-                    document.
-                    location.href = 'final';
-                },
-                error: function (data, status, error) {
-                    alert('error!');
-                    console.log(status);
-                }
+                statusCode: {
+                    200: function (response) {
+                        location.href = (data.valid) ? 'final';
+                  },
+                  400: function (response) {
+                   location.href = 'error';
             });
             return false;
         }
