--- a/templates/generate_key.html
+++ b/templates/generate_key.html
@@ -14,18 +14,19 @@
             <h1>VoteChain</h1>
         </div>
         <h3>Generate your private key</h3>
-        <label for="name1">
+        <label class="form__label" for="name1">
              {% if keyword %}
              Enter your key_word
              {% else %}
-             Whrong keyword, try again
+             Wrong keyword, try again
              {% endif %}
-            <span class="red">*</span></label>
+            <span class="red">*</span>
+        </label>
               <div class="name-item">
                 <input id="key_word" type="text" name="keyword"  required/>
             </div>
         <div class="btn-block">
-            <button id="btnSubmit" type="submit" formaction="./vote" type="button">Genearate</button>
+            <button id="btnSubmit" type="submit" formaction="./vote" type="button">Generate</button>
         </div>
     </form>
 </div>
